@startuml

title __STATE's Class Diagram__\n

  namespace State {
    class State.ConcreteStateA {
        ~ Handle()
    }
  }
  

  namespace State {
    class State.ConcreteStateB {
        ~ Handle()
    }
  }
  

  namespace State {
    class State.Context {
        + Context()
        + setState()
        ~ Request()
    }
  }
  

  namespace State {
    class State.State {
        ~ Handle()
    }
  }
  

  namespace State {
    class State.StateMain {
        {static} + main()
    }
  }
  

  State.ConcreteStateA -up-|> State.State
  State.ConcreteStateB -up-|> State.State
  State.Context o-- State.State : currentState


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
